<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- SIGN-IN SCREEN -->
    <LinearLayout android:id="@+id/screen_sign_in" style="@style/LLScreen">
        <TextView style="@style/GameTitle" />
        <TextView style="@style/GameBlurb" />

        <Button android:id="@+id/button_single_player"
            style="@style/MainScreenButton"
            android:text="@string/single_player" />
        <com.google.android.gms.common.SignInButton android:id="@+id/button_sign_in"
            style="@style/SignInButton" />
    </LinearLayout>

    <!-- MAIN SCREEN -->
    <LinearLayout android:id="@+id/screen_main" style="@style/LLScreen">
        <TextView style="@style/GameTitle" />
        <Button android:id="@+id/button_single_player_2"
            style="@style/MainScreenButton"
            android:text="@string/single_player" />
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/single_player_explanation" />
        <Button android:id="@+id/button_quick_game"
            style="@style/MainScreenButton"
            android:text="@string/quick_game" />
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/quick_game_explanation" />
        <Button android:id="@+id/button_invite_players"
            style="@style/MainScreenButton"
            android:text="@string/invite_players" />
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/invite_players_explanation" />
        <Button android:id="@+id/button_see_invitations"
            style="@style/MainScreenButton"
            android:text="@string/see_invitations" />
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/see_invitations_explanation" />
        <Button android:id="@+id/button_sign_out"
            style="@style/SignOutButton"
            android:text="@string/sign_out" />
    </LinearLayout>

    <!-- INVITATION POPUP -->
    <LinearLayout android:id="@+id/invitation_popup" style="@style/InvPopup">
        <TextView android:id="@+id/incoming_invitation_text" style="@style/InvPopupText" />
        <Button android:id="@+id/button_accept_popup_invitation"
            style="@style/InvPopupButton"
            android:text="@string/accept_popup_invite" />
    </LinearLayout>

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout android:id="@+id/screen_wait" style="@style/LLScreen">
        <TextView style="@style/Blurb" android:text="@string/please_wait" />
    </LinearLayout>

    <!-- GAMEPLAY SCREEN -->
    <LinearLayout android:id="@+id/screen_game" style="@style/GameplayScreen">

        <TextView android:id="@+id/guess_timer" android:text="Timer" style="@style/GuessTimer"/>

        <TableLayout style="@style/PhraseTable">
            <TableRow style="@style/PhraseRow">
                <TextView android:id="@+id/phrase_0_0" style="@style/PhraseCorner"/>
                <TextView android:id="@+id/phrase_0_1" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_0_2" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_0_3" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_0_4" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_0_5" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_0_6" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_0_7" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_0_8" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_0_9" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_0_10" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_0_11" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_0_12" style="@style/PhraseCorner"/>
            </TableRow>
            <TableRow style="@style/PhraseRow">
                <TextView android:id="@+id/phrase_1_0" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_1_1" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_1_2" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_1_3" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_1_4" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_1_5" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_1_6" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_1_7" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_1_8" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_1_9" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_1_10" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_1_11" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_1_12" style="@style/PhraseEmpty"/>
            </TableRow>
            <TableRow style="@style/PhraseRow">
                <TextView android:id="@+id/phrase_2_0" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_2_1" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_2_2" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_2_3" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_2_4" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_2_5" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_2_6" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_2_7" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_2_8" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_2_9" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_2_10" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_2_11" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_2_12" style="@style/PhraseEmpty"/>
            </TableRow>
            <TableRow style="@style/PhraseRow">
                <TextView android:id="@+id/phrase_3_0" style="@style/PhraseCorner"/>
                <TextView android:id="@+id/phrase_3_1" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_3_2" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_3_3" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_3_4" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_3_5" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_3_6" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_3_7" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_3_8" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_3_9" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_3_10" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_3_11" style="@style/PhraseEmpty"/>
                <TextView android:id="@+id/phrase_3_12" style="@style/PhraseCorner"/>
            </TableRow>
        </TableLayout>

        <LinearLayout style="@style/GuessLayout">
            <Button android:id="@+id/button_guess_phrase"
                    style="@style/GuesPhrase"
                    android:text="@string/guess_phrase"/>
            <TextView android:id="@+id/guess_info" style="@style/GuessInfo"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/keys_table" style="@style/KeysTable">
            <LinearLayout style="@style/KeysRow">
                <Button android:id="@+id/key_0_1" style="@style/Key" android:text="A" android:onClick="onClick"/>
                <Button android:id="@+id/key_0_2" style="@style/Key" android:text="Ą" android:onClick="onClick"/>
                <Button android:id="@+id/key_0_3" style="@style/Key" android:text="B" android:onClick="onClick"/>
                <Button android:id="@+id/key_0_4" style="@style/Key" android:text="C" android:onClick="onClick"/>
                <Button android:id="@+id/key_0_5" style="@style/Key" android:text="Ć" android:onClick="onClick"/>
                <Button android:id="@+id/key_0_6" style="@style/Key" android:text="D" android:onClick="onClick"/>
                <Button android:id="@+id/key_0_7" style="@style/Key" android:text="E" android:onClick="onClick"/>
                <Button android:id="@+id/key_0_8" style="@style/Key" android:text="Ę" android:onClick="onClick"/>
            </LinearLayout>
            <LinearLayout style="@style/KeysRow">
                <Button android:id="@+id/key_1_0" style="@style/Key" android:text="F" android:onClick="onClick"/>
                <Button android:id="@+id/key_1_1" style="@style/Key" android:text="G" android:onClick="onClick"/>
                <Button android:id="@+id/key_1_2" style="@style/Key" android:text="H" android:onClick="onClick"/>
                <Button android:id="@+id/key_1_3" style="@style/Key" android:text="I" android:onClick="onClick"/>
                <Button android:id="@+id/key_1_4" style="@style/Key" android:text="J" android:onClick="onClick"/>
                <Button android:id="@+id/key_1_5" style="@style/Key" android:text="K" android:onClick="onClick"/>
                <Button android:id="@+id/key_1_6" style="@style/Key" android:text="L" android:onClick="onClick"/>
                <Button android:id="@+id/key_1_7" style="@style/Key" android:text="Ł" android:onClick="onClick"/>
                <Button android:id="@+id/key_1_8" style="@style/Key" android:text="M" android:onClick="onClick"/>
            </LinearLayout>
            <LinearLayout style="@style/KeysRow">
                <Button android:id="@+id/key_2_0" style="@style/Key" android:text="N" android:onClick="onClick"/>
                <Button android:id="@+id/key_2_1" style="@style/Key" android:text="Ń" android:onClick="onClick"/>
                <Button android:id="@+id/key_2_2" style="@style/Key" android:text="O" android:onClick="onClick"/>
                <Button android:id="@+id/key_2_3" style="@style/Key" android:text="Ó" android:onClick="onClick"/>
                <Button android:id="@+id/key_2_4" style="@style/Key" android:text="P" android:onClick="onClick"/>
                <Button android:id="@+id/key_2_5" style="@style/Key" android:text="R" android:onClick="onClick"/>
                <Button android:id="@+id/key_2_6" style="@style/Key" android:text="S" android:onClick="onClick"/>
                <Button android:id="@+id/key_2_7" style="@style/Key" android:text="Ś" android:onClick="onClick"/>
                <Button android:id="@+id/key_2_8" style="@style/Key" android:text="T" android:onClick="onClick"/>
            </LinearLayout>
            <LinearLayout style="@style/KeysRow">
                <Button android:id="@+id/key_3_1" style="@style/Key" android:text="U" android:onClick="onClick"/>
                <Button android:id="@+id/key_3_2" style="@style/Key" android:text="W" android:onClick="onClick"/>
                <Button android:id="@+id/key_3_3" style="@style/Key" android:text="Y" android:onClick="onClick"/>
                <Button android:id="@+id/key_3_4" style="@style/Key" android:text="Z" android:onClick="onClick"/>
                <Button android:id="@+id/key_3_5" style="@style/Key" android:text="Ź" android:onClick="onClick"/>
                <Button android:id="@+id/key_3_6" style="@style/Key" android:text="Ż" android:onClick="onClick"/>
                <Button android:id="@+id/key_3_7" style="@style/Key" android:text="BCK" android:onClick="onClick"/>
            </LinearLayout>

            <TableLayout style="@style/KeyButtonsTable">
                <TableRow style="@style/KeyButtonsRow">
                    <Button android:id="@+id/button_guess_confirm" style="@style/GuessConfirm" android:text="Zatwierdź"/>
                    <Button android:id="@+id/button_guess_cancel" style="@style/GuessCancel" android:text="Anuluj"/>
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>